tests/fixtures/invalid/pow_none_str.py
# Cannot call pow() with None, Str
x = pow(None, "hello")
